Change Log
==========

Empire 1.0 (2015-11-18)
=======================
    * MODIFIED: Java 8
	* MODIFIED: Upgraded to Guice4, Sesame 4.0, Stardog 4.0, CP Utils 5.0 & CP OpenRDF Utils 4.0.1
	* REMOVED: apt-based utilities (issue #64)

Empire 0.9 (2015-03-25)
=======================
	* ADDED:    Gradle build out
	* ADDED:    Open sourced Stardog bindings
	* FIXED:    Resolved perm-gen leak (issue #86)
	* MODIFIED: Upgraded to Sesame 2.7.14, Guava 18, CP Utils 4.0 & CP OpenRDF Utils 3.0

Empire 0.8 (2013-09-30)
=======================
    * ADDED:    Ivy build out
	* MODIFIED: Altered superclass checks to better accommodate auto-generated instances that use EmpireGenerated so users to have to resort to incorrectly using MappedSuperclass
	* MODIFIED: Removed a couple uses of describe and replaced them with direct lookups in the DataSource for the relevant information to help make going to/from RDF more efficient.
	* MODIFIED: Dropped 4Store integration. (issue #84)
	* MODIFIED: Deprecated SDB integration
	* MODIFIED: Upgraded to latest Sesame, 2.7.0 (issue #76) -- additionally upgraded to Guava 14, CP Utils 3.0 & CP OpenRdf Utils 1.1
	* MODIFIED: Upgraded to latest Jena, 2.10.1 (as well as TDB & SDB).  (issue #82)
	* MODIFIED: Upgraded to SLF4J for logging and placed core logging calls in isXXX checks to avoid as much logging overhead as possible.  (issue #83)
	* MODIFIED: Support mapping multiple triples to single value in non-strict mode (issue #85)
	* FIXED: Collections were getting mangled over repeated merges when they were lazy loaded (issue #81)
	* FIXED: Bug when the refreshing and/or re-use of the same bean which is persisted originally, EmpireGenerated information was not correctly updated. (issue #73)
	* FIXED: NPE in AsValue function when using a java.net.URI
	* FIXED: Bug in equals method of generated instances
	* FIXED: Bug with using wildcard types in interfaces that are used in the code generation. (issue #70)